Fix subs dropdown covering movie indicator

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -398,7 +398,8 @@
         .flag-container {
             position: absolute
             width: auto
-            max-width: 24.9%
+            max-width: 20%
+            max-height: 50px
             right: 13.56%
             overflow-x: hidden
             overflow-y: hidden
